k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-angular-container
          image: dobrevd/url-shortener-angular-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
