k8s/url-shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener-container
          image: dobrevd/url-shortener-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
