k8s/url-audit-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-audit-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: url-audit
  ports:
    - port: 8082
      targetPort: 8080
