k8s/url-shortener-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: url-shortener
  ports:
    - port: 8080
      targetPort: 8080
